--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FACEBOOK_CLIENT_ID=2035334156518235
+FACEBOOK_CLIENT_SECRET=0c8ffa0f6322328402e716a8608c6749
+
+GOOGLE_CLIENT_ID=357291445993-j834p0j254cs64evtcgbnnc39a6j2t6e.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=RQzS7jOAK_QP35HdV3GjbkC_
