--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "coenjacobs/eloquent-composite-primary-keys": "^1.0",
         "fideloper/proxy": "~4.0",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
         "laravel/passport": "^7.0",
         "laravel/socialite": "^3.1",
