--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+L5_SWAGGER_CONST_HOST=http://localhost:8000/api/mobile
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
