--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/passport": "^7.0",
         "laravel/socialite": "^3.1",
         "laravel/tinker": "~1.0",
-        "santigarcor/laratrust": "5.0.*"
+        "santigarcor/laratrust": "5.0.*",
+        "darkaonline/l5-swagger": "5.7.*"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
